--- a/src/pages/categories/[categories]/index.astro
+++ b/src/pages/categories/[categories]/index.astro
@@ -53,7 +53,7 @@ const page = {
 		</div>
 		<div class="mt-14">
 			<div class='postList"'>
-				{data.map((post, index) => <PostBlock post={post} showCategory={false} />)}
+				{data.map((post, index) => <PostBlock post={post} />)}
 			</div>
 		</div>
 		<div class="my-8">
