--- a/src/components/common/PostBlock.astro
+++ b/src/components/common/PostBlock.astro
@@ -32,7 +32,7 @@ const { title, description, pubDate, updatedDate, categories, tags, coverImage }
 			{
 				updatedDate && !dayjs(dayjs(updatedDate)).isSame(dayjs(pubDate)) && (
 					<span
-						class="hidden items-center lg:flex"
+						class="hidden items-center md:flex"
 						title={`更新日期：${dayjs(updatedDate).format('YYYY-MM-DD HH:mm:ss')}`}
 						aria-label={`更新日期：${dayjs(updatedDate).format('YYYY-MM-DD HH:mm:ss')}`}
 					>
@@ -52,10 +52,10 @@ const { title, description, pubDate, updatedDate, categories, tags, coverImage }
 				)
 			}
 		</div>
-		<h2 class="group-hover:text-primary dark:group-hover:text-primary-dark text-2xl font-semibold tracking-normal transition-colors">
+		<h2 class="group-hover:text-primary dark:group-hover:text-primary-dark text-xl font-semibold tracking-normal transition-colors md:text-2xl">
 			<a href={`${siteConfig.base}/posts/${post.id}/`}>{title}</a>
 		</h2>
-		<p class="line-clamp-1 text-lg opacity-90">{description}</p>
+		<p class="line-clamp-2 opacity-90 md:line-clamp-1 md:text-lg">{description}</p>
 		<div class="group flex items-center gap-2">
 			{
 				tags &&
@@ -63,7 +63,7 @@ const { title, description, pubDate, updatedDate, categories, tags, coverImage }
 					tags.flat().map((tag: string) => (
 						<a
 							href={`${siteConfig.base}/tags/${tagNameSlugify(tag)}`}
-							class="inline-flex items-center justify-center rounded-lg bg-zinc-200/50 px-2 py-1.25 text-sm transition-all group-hover:shadow hover:bg-zinc-300/80 dark:bg-zinc-600/80 dark:hover:bg-zinc-500"
+							class="inline-flex items-center justify-center rounded-lg bg-zinc-200/50 px-2 py-1 text-sm transition-all hover:bg-zinc-300/80 md:group-hover:shadow dark:bg-zinc-600/80 dark:hover:bg-zinc-500"
 						>
 							<Icon name="material-symbols:tag-rounded" class="mr-0.5 inline-flex" size={18} />
 							<span>{tag}</span>
