--- a/src/pages/archives/index.astro
+++ b/src/pages/archives/index.astro
@@ -33,7 +33,7 @@ const allYears = [...new Set(allPosts.flatMap((post) => dayjs(post.data.pubDate)
 							{allPosts
 								.filter((post) => dayjs(post.data.pubDate).year() === year)
 								.map((post) => (
-									<div class="group ml-2.5 grid items-center rounded-md rounded-l-none border-l-3 py-3 text-xl transition-all hover:scale-[1.025] hover:ring-3 md:grid-cols-[120px_1fr] md:py-2">
+									<div class="group ml-2.5 grid items-center gap-y-1.5 rounded-md rounded-l-none border-l-3 py-3 text-xl transition-all hover:scale-[1.025] hover:ring-3 md:grid-cols-[120px_1fr] md:gap-y-0 md:py-2">
 										<span
 											class="flex items-center pl-4 font-mono md:pl-5"
 											title={`發表日期：${dayjs(post.data.pubDate).format('YYYY-MM-DD HH:mm')}`}
