chore(style): 調整頁面標題字體大小及元素間隔、調整圖示

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,7 +4,7 @@ import BaseLayout from '@Layouts/BaseLayout.astro'
 ---
 
 <BaseLayout title=`關於本站 | ${siteConfig.title}`>
-	<main class="app-container pt-36">
+	<main class="main-container">
 		<h1 class="page-title">關於本站</h1>
 	</main>
 	<section class="app-container mb-8 flex justify-center py-12">
