--- a/src/pages/archives/index.astro
+++ b/src/pages/archives/index.astro
@@ -19,7 +19,7 @@ const allYears = [...new Set(allPosts.flatMap((post) => dayjs(post.data.pubDate)
 		<div class="flex flex-wrap items-center">
 			<h1 class="page-title">文章歸檔</h1>
 		</div>
-		<div class="mt-14 mb-22">
+		<section class="mt-10 mb-14">
 			<ul class="grid gap-5 md:gap-10">
 				{
 					allYears.map((year) => (
@@ -50,6 +50,6 @@ const allYears = [...new Set(allPosts.flatMap((post) => dayjs(post.data.pubDate)
 					))
 				}
 			</ul>
-		</div>
+		</section>
 	</main>
 </BaseLayout>
