--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,7 +36,7 @@ html {
 }
 
 .page-title {
-	@apply text-5xl font-bold;
+	@apply text-4xl font-bold;
 }
 
 /* Container */
@@ -45,7 +45,11 @@ html {
 }
 
 .main-container {
-	@apply container mx-auto px-6 pt-32 sm:px-12 2xl:px-16;
+	@apply container mx-auto px-6 pt-30 sm:px-12 2xl:px-16;
+}
+
+.main-section {
+	@apply my-10;
 }
 
 /* NavBar */
