chore(style): 調整樣式

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
 	--font-mono: 'JetBrains Mono Variable', 'Noto Sans TC Variable', monospace;
 
 	--color-foreground: #0c0c0c;
-	--color-foreground-dark: #fafafa;
+	--color-foreground-dark: #fbfbfb;
 	--color-background: #fbfbfb;
 	--color-background-dark: #2b2b2b;
 	--color-primary: #1369a2;
@@ -31,10 +31,6 @@ html {
 }
 
 /* General */
-.site-title-container {
-	@apply relative container mx-auto flex flex-col justify-center gap-12 px-6 py-24 pt-44 sm:px-12 md:py-36 md:pt-48 2xl:px-16;
-}
-
 .page-title {
 	@apply text-4xl font-bold;
 }
@@ -48,8 +44,20 @@ html {
 	@apply container mx-auto px-6 pt-30 sm:px-12 2xl:px-16;
 }
 
+.site-title-container {
+	@apply relative container mx-auto flex flex-col justify-center gap-12 px-6 py-24 pt-44 sm:px-12 md:py-36 md:pt-48 2xl:px-16;
+}
+
+.home-post-container {
+	@apply my-6 grid items-stretch gap-6 md:grid-cols-2 xl:grid-cols-4;
+}
+
 .main-section {
 	@apply my-10;
+}
+
+.postList {
+	@apply space-y-3;
 }
 
 /* NavBar */
@@ -70,11 +78,6 @@ html {
 	@apply flex items-center rounded-lg bg-zinc-200/75 px-2 py-1.5 ring ring-black/10 transition-[max-width] duration-250 ease-in-out hover:bg-zinc-300/75 hover:shadow-md active:shadow-none dark:bg-zinc-600/75 dark:hover:bg-zinc-500/75;
 }
 
-/* Post Content */
-.prose blockquote > p::before {
-	content: '';
-}
-
 /* Pagination */
 .btn-pagination {
 	@apply text-foreground dark:text-foreground-dark hover:bg-foreground/15 hover:dark:bg-foreground-dark/15 active:bg-foreground/35 active:dark:bg-foreground-dark/35 m-1 flex w-fit items-center gap-2 rounded-md px-3 py-2 transition-colors;
@@ -92,11 +95,7 @@ html {
 	@apply text-foreground dark:text-foreground-dark hover:bg-foreground/15 hover:dark:bg-foreground-dark/15 active:bg-foreground/35 active:dark:bg-foreground-dark/35 m-1 flex w-fit items-center gap-2 rounded-md px-1 py-2 transition-colors;
 }
 
-/* Page: home */
-.home-post-container {
-	@apply my-6 grid items-stretch gap-6 md:grid-cols-2 xl:grid-cols-4;
-}
-
+/* Common Components */
 .postCard {
 	@apply flex h-full flex-col gap-3 pb-6;
 }
@@ -110,7 +109,6 @@ html {
 	transform: scale(1.1);
 }
 
-/* Common Components */
 .postBlock {
 	@apply relative flex flex-col gap-3 rounded-lg py-5 transition-all hover:bg-white md:px-5 md:hover:scale-[1.025] md:hover:shadow-2xl md:hover:ring-3 lg:flex-row lg:gap-7 hover:dark:bg-white/10;
 }
@@ -123,14 +121,10 @@ html {
 	@apply line-clamp-1 flex h-full flex-row items-center gap-1 rounded-lg bg-zinc-100/80 p-2.5 text-center text-lg shadow transition-all hover:scale-[1.075] hover:shadow-xl hover:ring-3 dark:bg-zinc-100/10;
 }
 
-/* Other */
+/* Plugin Modifies */
 .medium-zoom-overlay,
 .medium-zoom-image--opened {
 	@apply bg-background/80! dark:bg-background-dark/80! z-999 backdrop-blur-lg;
-}
-
-.toc-highlight {
-	@apply border-l-[3.5px] bg-zinc-200/60 dark:bg-zinc-200/20;
 }
 
 .astro-code,
@@ -138,20 +132,34 @@ html {
 	@apply dark:bg-(--shiki-dark-bg)! dark:text-(--shiki-dark)!;
 }
 
-.postList {
-	@apply space-y-3;
-}
-
+/* TailwindCSS Typography Modifies */
 .prose-element-modify {
 	@apply prose-figure:my-5 prose-figure:text-center prose-img:rounded-sm prose-img:mx-auto prose-table:my-5 prose-p:my-5;
 }
 
-.link-folded {
-	@apply hover:text-primary flex items-center rounded-lg transition-[max-width] duration-250 ease-in-out;
+.prose blockquote > p::before {
+	content: '';
 }
 
 .prose img,
 .prose iframe {
 	max-inline-size: 100%;
-	block-size: auto;
+}
+
+.prose code::before,
+.prose code::after {
+	content: '';
+}
+
+.prose code:not(pre > code) {
+	@apply mx-0.5 rounded-sm bg-gray-200/80 px-1 py-0.5 ring ring-black/5 dark:bg-gray-200/20 dark:ring-white/20;
+}
+
+/* Other */
+.toc-highlight {
+	@apply border-l-[3.5px] bg-zinc-200/60 dark:bg-zinc-200/20;
+}
+
+.link-folded {
+	@apply hover:text-primary flex items-center rounded-lg transition-[max-width] duration-250 ease-in-out;
 }
