--- a/src/components/toc/TableOfContents.astro
+++ b/src/components/toc/TableOfContents.astro
@@ -7,6 +7,10 @@ interface Props {
 	headings: MarkdownHeading[]
 }
 
+interface HeadingItem extends MarkdownHeading {
+	children: MarkdownHeading[]
+}
+
 const { headings } = Astro.props
 
 /**
@@ -17,7 +21,7 @@ function generateNestedHeading(headings: MarkdownHeading[]) {
 	const root = []
 	const stack = []
 	for (const heading of headings) {
-		const item: any = { ...heading, children: [] }
+		const item: HeadingItem = { ...heading, children: [] }
 		if (stack.length === 0) {
 			root.push(item)
 			stack.push(item)
@@ -91,7 +95,9 @@ const nestedHeadings = generateNestedHeading(headings)
 
 		// Get headings in Post
 		const headings = Array.from(document.querySelectorAll('h1[id], h2[id], h3[id], h4[id], h5[id], h6[id]'))
-		if (headings.length === 0) return
+		if (headings.length === 0) {
+			return
+		}
 
 		// Get Toc links
 		const tocLinks = document.querySelectorAll('.toc-list li a')
@@ -102,7 +108,9 @@ const nestedHeadings = generateNestedHeading(headings)
 		/** Highlight first visible heading of all visible headings on page loaded */
 		const initObserver = new IntersectionObserver((entries, observer) => {
 			const visibleEntries = entries.filter((entry) => entry.isIntersecting)
-			if (visibleEntries.length === 0) return
+			if (visibleEntries.length === 0) {
+				return
+			}
 			const id = visibleEntries[0].target.getAttribute('id')
 			const tocLink: HTMLAnchorElement | null = document.querySelector(`.toc-list li a[href="#${id}"]`)
 			if (tocLink) {
@@ -117,7 +125,7 @@ const nestedHeadings = generateNestedHeading(headings)
 				entries.forEach((entry) => {
 					const entryID = entry.target.getAttribute('id')
 					if (!initialStatus && !isEntryDisappearFromTopOfWindow(entry) && !entry.isIntersecting) {
-						let indexOfHeading = getHeadingIndex(entry)
+						const indexOfHeading = getHeadingIndex(entry)
 						if (indexOfHeading === 0) {
 							tocLinks.forEach((link) => link.classList.remove('toc-highlight'))
 						} else {
@@ -158,7 +166,9 @@ const nestedHeadings = generateNestedHeading(headings)
 		 * @return true 代表標題從畫面頂部消失 (向下滾動), false 代表標題從畫面頂部出現 (向上滾動)
 		 */
 		function isEntryDisappearFromTopOfWindow(entry: IntersectionObserverEntry) {
-			if (!entry.rootBounds) return
+			if (!entry.rootBounds) {
+				return
+			}
 			return entry.rootBounds.bottom - entry.boundingClientRect.bottom > entry.rootBounds.bottom / 2
 		}
 
@@ -168,7 +178,7 @@ const nestedHeadings = generateNestedHeading(headings)
 		 * @return 標題位於陣列的索引值
 		 */
 		function getHeadingIndex(entry: IntersectionObserverEntry) {
-			let target = (element: Element) => element === entry.target
+			const target = (element: Element) => element === entry.target
 			return headings.findIndex(target)
 		}
 
