--- a/src/pages/posts/page/[page].astro
+++ b/src/pages/posts/page/[page].astro
@@ -29,7 +29,7 @@ const { data } = page
 		</div>
 		<section class="main-section">
 			<div class="postList">
-				{data.map((post, index) => <PostBlock post={post} />)}
+				{data.map((post) => <PostBlock post={post} />)}
 			</div>
 		</section>
 		<div class="my-10">
