style: 調整網站在淺色模式下的背景色

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 
 	--color-foreground: #0c0c0c;
 	--color-foreground-dark: #fbfbfb;
-	--color-background: #fbfbfb;
+	--color-background: #fcfcfc;
 	--color-background-dark: #2b2b2b;
 	--color-primary: #1369a2;
 	--color-primary-dark: #7dd3fc;
