style: 調整文章資訊與文章標題之間的間隔

--- a/src/components/common/PostBlock.astro
+++ b/src/components/common/PostBlock.astro
@@ -52,7 +52,7 @@ const { title, description, pubDate, updatedDate, categories, tags, coverImage }
 				)
 			}
 		</div>
-		<h2 class="group-hover:text-primary dark:group-hover:text-primary-dark text-xl font-semibold tracking-normal transition-colors md:text-2xl">
+		<h2 class="group-hover:text-primary dark:group-hover:text-primary-dark text-xl font-semibold tracking-normal transition-colors md:text-2xl mt-1">
 			<a href={`${siteConfig.base}/posts/${post.id}/`}>{title}</a>
 		</h2>
 		<p class="line-clamp-2 opacity-90 md:line-clamp-1 md:text-lg">{description}</p>
