--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 
 	--color-foreground: #0c0c0c;
 	--color-foreground-dark: #fbfbfb;
-	--color-background: #fcfcfc;
+	--color-background: #fafafa;
 	--color-background-dark: #2b2b2b;
 	--color-primary: #1369a2;
 	--color-primary-dark: #7dd3fc;
@@ -67,7 +67,7 @@ html {
 
 /* Button */
 .btn-primary {
-	@apply bg-foreground hover:bg-foreground/75 text-background dark:bg-foreground-dark hover:dark:bg-foreground-dark/85 dark:text-background-dark flex w-fit items-center gap-2 rounded-lg px-3 py-2 hover:shadow-lg active:shadow-none transition-all;
+	@apply bg-foreground hover:bg-foreground/75 text-background dark:bg-foreground-dark hover:dark:bg-foreground-dark/85 dark:text-background-dark flex w-fit items-center gap-2 rounded-lg px-3 py-2 transition-all hover:shadow-lg active:shadow-none;
 }
 
 .btn-secondary {
@@ -114,11 +114,11 @@ html {
 }
 
 .categoryCard {
-	@apply flex h-full flex-col gap-3 rounded-lg bg-zinc-100/50 px-5 py-4 shadow transition-all hover:-translate-y-1.5 hover:scale-[1.025] hover:bg-zinc-100/40 hover:shadow-xl hover:ring-3 dark:bg-zinc-100/10 hover:dark:bg-zinc-100/15;
+	@apply flex h-full flex-col gap-3 rounded-lg bg-zinc-100/50 px-5 py-4 ring-1 ring-zinc-200 transition-all hover:-translate-y-1.5 hover:scale-[1.025] hover:shadow-lg dark:bg-zinc-100/15 dark:ring-zinc-100/20;
 }
 
 .tagCard {
-	@apply line-clamp-1 flex h-full flex-row items-center gap-1 rounded-lg bg-zinc-100/50 p-2.5 text-center text-lg shadow transition-all hover:scale-[1.075] hover:shadow-xl hover:ring-3 dark:bg-zinc-100/10;
+	@apply line-clamp-1 flex h-full flex-row items-center gap-1 rounded-lg bg-zinc-100 p-2.5 text-center text-lg ring-1 ring-zinc-200 transition-all hover:scale-[1.075] hover:shadow-lg dark:bg-zinc-100/15 dark:ring-zinc-100/20;
 }
 
 /* Plugin Modifies */
@@ -134,7 +134,7 @@ html {
 
 /* TailwindCSS Typography Modifies */
 .prose-element-modify {
-	@apply prose-headings:first:mt-0 prose-headings:mt-[1.2em] prose-headings:mb-0 prose-p:my-5 prose-ul:mt-[1.2em] prose-table:my-5 prose-pre:mt-[2em] prose-figure:my-5 prose-figure:text-center prose-img:rounded-sm prose-img:mx-auto;
+	@apply prose-headings:first:mt-0 prose-headings:mt-[1.2em] prose-h2:mb-[0.8em] prose-p:my-5 prose-ul:mt-[1.2em] prose-table:my-5 prose-pre:mt-[2em] prose-figure:my-5 prose-figure:text-center prose-img:rounded-sm prose-img:mx-auto;
 }
 
 .prose blockquote > p::before {
